 * Support for 9/10bits output in the OpenGL output
 * Updated OpenGL video output for Mac, requires a Quartz Extreme capable machine

Audio Output and Filters:
 * New audio output based on AudioQueue API for iOS
 * New audio output in memory (amem)
 * Important simplification and improvements in the core audio output
 * New audio output based on OpenSL ES API for Android
 * New audio resampler using the Secret Rabbit Code (a.k.a. libsamplerate)
 * New Compressor filter, a dynamic range compressor
 * New simplistic Karaoke filter

Video Filter:
 * New gradfun filter for debanding videos using dithering
 * Rewrite of the grain filter, faster and with better quality
 * New posterize filter for lowering the number of colors
 * Atmo ambilight: improve Fnordlicht up to 254 channels
 * New sepia filter for creating sepia effect in videos
 * New deinterlacer mode Phosphor, a framerate doubling CRT TV simulator
 * New deinterlacer mode IVTC, to do live inverse telecine for NTSC films
 * New subsdelay filter to change subtitles delay
 * New anti-flickering filter
 * New OpenMAX DL IPCS filter for color space conversion and resizing
 * Major improvements in the freetype text-rendering module, notably supporting
   blackbox and customizable shadow
   NB: The freetype module is now used by default on the Mac OS X instead of
   the quartztext module, which can still be enabled manually.

Stream output:
 * New livehttp-module for HTTP Live Streaming (IETF draft) output
   example: vlc inputfile :sout="#transcode{vcodec=h264,acodec=mp3,
    venc=x264{profile=baseline},width=320,vb=256,ab=96}:std{
    access=livehttp{index=public_html/iphonestream.m3u8,
    index-url=http://url-to-iphonestreamfile-###.ts},mux=ts{use-key-frames},
    dst=public_html/iphonestreamfile-###.ts}"
 * RTP: support for Vorbis and Theora
 * Major rework of VoD support
 * New delay module, to introduce delays of one ES, when streaming:
       #delay{id=12,delay=500}:standard...