@@ -64,3 +64,11 @@ libvlc_LTLIBRARIES += \
 	libugly_resampler_plugin.la
 EXTRA_LTLIBRARIES += \
 	libbandlimited_resampler_plugin.la
+
+libspeex_resampler_plugin_la_SOURCES = resampler/speex.c
+libspeex_resampler_plugin_la_CFLAGS = $(AM_CFLAGS) $(SPEEXDSP_CFLAGS)
+libspeex_resampler_plugin_la_LIBADD = $(AM_LIBADD) $(SPEEXDSP_LIBS)
+libspeex_resampler_plugin_la_DEPENDENCIES =
+if HAVE_SPEEXDSP
+libvlc_LTLIBRARIES += libspeex_resampler_plugin.la
+endif
